ChmSee X.X.X
------------

l10n
~~~~

* New: de, zh_TW


ChmSee 1.0.6 2009-07-12
-----------------------

Features
~~~~~~~~

* issue 31: add index tab in left-pane (if chm file has index)

Bugs
~~~~

* issue 29: don't alert when open a chm file and the homepage url is invalid.
* issue 30: init libgcrypt, thanks patch from lubekgc.
* issue 33: close file in fullscreen mode cause chmsee no longer works.
* issue 34: more keyboard shortcur under fullscreen mode.
* issue 35: fix segmentation fault when closing.
* issue 40: keep html page position when switch between fullscreen and normal mode.
* issue 41: when chm file has no title, show the filename in the title.
* issue 42: conflict with xulrunner 1.9.1.

l10n
~~~~

* New: ca, da, id, ms, pl, ro, sk, vi
* Updated: cs, es, zh_CN

ChmSee 1.0.5 2009-05-17
-----------------------

Meta
~~~~

* switch build system from autotools to cmake.

Features
~~~~~~~~

* issue 18: fullscreen mode support. (from normal mode to fullscreen: F11,
  from fullscreen mode to normal: F11 or Esc)
* issue 21: save sidebar width.

Bugs
~~~~

* issue 19: Arabic language support in sidebar.
* issue 25: Double-click on topic title (in sidebar) to open its sub-topics 
* a safer hcc parser.

l10n
~~~~

* New: Brazilian Portuguese, Czech, Greek, Portuguese, Slovak, Ukrainian
* Updated: French, Simplified Chinese, Spanish, Swahili


ChmSee 1.0.4 2009-03-14
-----------------------

Features
~~~~~~~~

* issue#8: support Drag & Drop.
* remove cs2w.

Bugs
~~~~

* issue#7: different case in URI and filename.
* issue#12: image with a broken URL can't correct display

l10n
~~~~

* New: en_GB, fr, nb, ru, es.
* Updated: sw.

ChmSee 1.0.3 2009-01-10
------------------------

interface
~~~~~~~~~

* Add "Copy Page Location" to the context menu.

l10n
~~~~

* Add Hebrew translation, thanks to Yaron.
* Add Swahili translation, thanks to Emanuel Feruzi.
* Add Bengali translation, thanks to faisal.

ChmSee 1.0.2 2008-12-03
------------------------